Templates and content.

--- a/themes/default/templates/index.ejs
+++ b/themes/default/templates/index.ejs
@@ -1,20 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Creadores cubanos de videojuegos</title>
-</head>
-<body>
-    <p>
-        Hola mundo!
-    </p>
+<%- include("_header") %>
 
-    <% foreach(const child of page.children) { %>
+    <div class="main-header p-5 mb-4">
+        <div class="container py-5">
+            <h1 class="display-5 fw-bold text-light">
+                <%= page.metadata.title %>
+            </h1>
+            <p class="col-md-8 fs-4 text-light">
+                <%= page.metadata.description %>
+            </p>
+            <a href="/estudios" class="btn btn-primary btn-lg" type="button">Estudios de Videojuegos</a>
+        </div>
+    </div>
 
-        <p><%= child.metadata.title %></p>
 
-    <% } %>
-</body>
-</html>
+    <%- include("_footer") %>
