Allows using "item.ejs" template for section's children content.

--- a/themes/default/templates/index.ejs
+++ b/themes/default/templates/index.ejs
@@ -13,4 +13,10 @@
     </div>
 
 
+    <div class="container">
+
+        <h1>TODO MISSING BODY</h1>
+        
+    </div>
+
     <%- include("_footer") %>
