--- a/themes/default/templates/_header.ejs
+++ b/themes/default/templates/_header.ejs
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= site.metadata.title %> </title>
 
-    <link rel="stylesheet" href="/bootstrap/vapor/bootstrap.min.css">
+    <link rel="stylesheet" href="/bootstrap/simplex/bootstrap.min.css">
     <link rel="stylesheet" href="/css/custom.css">
     <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
 </head>
 
 <body>
 
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg border-0">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">
                 <img src="/images/logo.png" alt="" height="30" class="d-inline-block align-text-top">
