--- a/themes/default/templates/_footer.ejs
+++ b/themes/default/templates/_footer.ejs
@@ -6,13 +6,9 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <p>Made by <a href="https://thomaspark.co/">Thomas Park</a>.</p>
-                <p>Code released under the <a href="https://github.com/thomaspark/bootswatch/blob/master/LICENSE">MIT
-                        License</a>.</p>
-                <p>Based on <a href="https://getbootstrap.com/" rel="nofollow">Bootstrap</a>. Icons from <a
-                        href="https://fontawesome.com/" rel="nofollow">Font Awesome</a>. Web fonts from <a
-                        href="https://fonts.google.com/" rel="nofollow">Google</a>.</p>
-
+                <p>Copyright 2021 Creadores Cubanos de Videojuegos</p>
+                <p>Síguenos en <a href="#">Telegram</a>, <a href="#">Twitter</a>, <a href="#">Facebook</a><div class=""></div></p>
+                <p>Contribuye a esta plataforma en <a href="#">nuestra cuenta de GitHub</a>.</p>
             </div>
         </div>
     </footer>
