--- a/themes/default/templates/_page.ejs
+++ b/themes/default/templates/_page.ejs
@@ -1,14 +1,19 @@
-<div class="container">
+<div class="container-fluid p-5 mb-5 bg-info text-light main-header-img">
 
-    <div class="alert alert-primary mt-5">
-
-        <h1 class="text-light">
-            <%= page.metadata.title %>
-        </h1>
-
+    <div class="mb-4">
+        <div class="container">
+            <h1 class="display-5 fw-bold text-light text-center">
+                <%= page.metadata.title %>
+            </h1>
+            <p class="fs-5 text-white text-center">
+                <%= page.metadata.description %>
+            </p>
+        </div>
     </div>
+</div>
 
+<div class="container mt-2">
 
     <%- page.content %>
-
+    
 </div>
