--- a/themes/default/templates/blog/index.ejs
+++ b/themes/default/templates/blog/index.ejs
@@ -2,24 +2,36 @@
 
     <%- include("_page") %>
 
-        <div class="container">
+        <div class="container mt-5 pt-5">
 
-            <% page.children.forEach(post=> { %>
+            <% 
+            
+            const posts = utils.sortPagesByDate(page.children);
+            
+            %>
 
-                <div class="card mb-2 border-primary">
+            <% posts.forEach(post=> { %>
 
-                    <div class="card-body">
-                        <h3 class="card-title">
-                            <%= post.metadata.title %>
-                        </h3>
+                <div class="card mb-5 bg-transparent border-0">
+                    <div class="row g-0">
+                        <div class="col-md-4 text-center bg-primary">
+                        <img src="/<%= post.directory %>/<%= post.metadata.image %>" 
+                            class="img-fluid" alt="<%= post.metadata.title %>">
+                        </div>
+                        <div class="col-md-8">
+                        <div class="card-body">
+                            <h3 class="card-title"><%= post.metadata.title %></h3>
+                            <p class="card-text"><%= post.metadata.description %></p> 
+                            <p>
+                            <a class="card-link" href="/<%= post.directory %>" role="button">Leer el artítculo completo &RightArrow;</a>
+                            </p>                     
+                        </div>
+                        </div>
                     </div>
-
                 </div>
 
-                <% }) %>
+            <% }) %>
 
         </div>
-
-        here
 
         <%- include("_footer") %>
