--- a/themes/default/templates/index.ejs
+++ b/themes/default/templates/index.ejs
@@ -1,11 +1,11 @@
 <%- include("_header") %>
 
-    <div class="main-header p-5 mb-4">
+    <div class="main-header-img p-5 mb-4">
         <div class="container py-5">
             <h1 class="display-5 fw-bold text-light">
                 <%= page.metadata.title %>
             </h1>
-            <p class="col-md-8 fs-4 text-light">
+            <p class="col-md-8 fs-4 text-white">
                 <%= page.metadata.description %>
             </p>
             <a href="/estudios" class="btn btn-primary btn-lg" type="button">Estudios de Videojuegos</a>
@@ -15,8 +15,76 @@
 
     <div class="container">
 
-        <h1>TODO MISSING BODY</h1>
+        <div class="alert m-5">
+            <h2 class="text-center">Últimas Noticias</h2>
+        </div>
+
+        <%         
+            const posts = utils.sortPagesByDate(site.__blog.children).slice(0, 3);
+        %>
+
+        <div class="card-group home-noticias-group">
+
+        <% posts.forEach(post => { %>
+
+                <div class="card border-0 bg-transparent m-3">
+                    <img src="/<%= post.directory %>/<%= post.metadata.image %>" 
+                        class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h4 class="card-title"><%= post.metadata.title %></h4>
+                      <p class="text-muted"><%= post.metadata.date %></p>
+                      <p class="card-text"><%= post.metadata.description %></p>
+                    </div>
+                    <div class="card-footer bg-transparent border-0">
+                      <a class="card-link" href="/<%= post.directory %>" role="button">Leer el artículo completo &RightArrow;</a>
+                    </div>
+                  </div>
+        <% }) %>
         
-    </div>
+        </div> <!-- row -->
+        
+        <p class="text-end w-100 mt-5">
+            <a class="link-primary" href="/blog">Ver todas las noticias &RightArrow;</a>
+        </p>
+
+        <br>
+
+        <div class="m-5">
+            <h2 class="text-center">Nuestros Estudios</h2>
+        </div>
+
+        <br>
+
+        <% 
+          const estudios = site.__estudios.children.slice(0, 3);
+        %>
+
+        <% estudios.forEach(child => { %>
+
+            <div class="card mb-5 bg-transparent border-0">
+                <div class="row g-0">
+                  <div class="col-md-4 text-center bg-primary">
+                    <img src="/<%= child.directory %>/<%= child.metadata.image %>" 
+                        class="img-fluid" alt="<%= child.metadata.title %>">
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h3 class="card-title"><%= child.metadata.title %></h3>
+                      <p class="card-text"><%= child.metadata.description %></p> 
+                      <p>
+                        <a class="card-link" href="/<%= child.directory %>" role="button">Quiero saber más &RightArrow;</a>
+                      </p>                     
+                    </div>
+                  </div>
+                </div>
+              </div>
+            
+            <% }); %>
+
+            <p class="text-end w-100 mt-5">
+                <a class="link-primary" href="/estudios">Ver todos los estudios &RightArrow;</a>
+            </p>
+        
+    </div> <!-- containter -->
 
     <%- include("_footer") %>
