--- a/themes/default/templates/_header.ejs
+++ b/themes/default/templates/_header.ejs
@@ -9,14 +9,16 @@
 
     <link rel="stylesheet" href="/bootstrap/simplex/bootstrap.min.css">
     <link rel="stylesheet" href="/css/custom.css">
-    <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/fontawesome/css/all.min.css">
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
 </head>
 
 <body>
 
-    <nav class="navbar navbar-expand-lg border-0">
+    <nav class="navbar navbar-expand-lg border-0 navbar-light text-primary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">
+            <a class="navbar-brand text-primary" href="/">
                 <img src="/images/logo.png" alt="" height="30" class="d-inline-block align-text-top">
                 Creadores Cubanos de Videojuegos
               </a>
@@ -32,7 +34,7 @@
                     
                     <% site.children.forEach(child=> { %>
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="/<%= child.directory %>">
+                            <a class="nav-link text-primary" aria-current="page" href="/<%= child.directory %>">
                                 <%= child.metadata.title %>
                             </a>
                         </li>
@@ -42,3 +44,4 @@
             </div>
         </div>
     </nav>
+
