--- a/themes/default/templates/index.ejs
+++ b/themes/default/templates/index.ejs
@@ -63,7 +63,7 @@
 
             <div class="card mb-5 bg-transparent border-0">
                 <div class="row g-0">
-                  <div class="col-md-4 text-center bg-primary">
+                  <div class="col-md-4 text-center">
                     <img src="/<%= child.directory %>/<%= child.metadata.image %>" 
                         class="img-fluid" alt="<%= child.metadata.title %>">
                   </div>
