--- a/themes/default/templates/_page.ejs
+++ b/themes/default/templates/_page.ejs
@@ -1,4 +1,4 @@
-<div class="container-fluid p-5 mb-5 bg-info text-light main-header-img">
+<div class="container-fluid p-5 mb-5 bg-primary text-light main-header-img">
 
     <div class="mb-4">
         <div class="container">
@@ -12,7 +12,7 @@
     </div>
 </div>
 
-<div class="container mt-2">
+<div class="container mt-2 page-content">
 
     <%- page.content %>
     
