--- a/themes/default/templates/blog/item.ejs
+++ b/themes/default/templates/blog/item.ejs
@@ -15,7 +15,7 @@
 
     <div class="p-3"></div>
 
-    <div class="container mt-5 fs-5">
+    <div class="container mt-5 page-content">
 
         <%- page.content %>
 
