--- a/themes/default/templates/estudios/item.ejs
+++ b/themes/default/templates/estudios/item.ejs
@@ -14,7 +14,7 @@
             <div class="card-body fs-5">
 
                 <div class="row row-cols-sm-1 row-cols-md-2">
-                    <div class="col mb-4">
+                    <div class="col mb-4 page-content">
                         <%- page.content %>
 
                         <h3 class="mt-5">Productos de <%= page.metadata.title %></h3>
