--- a/themes/default/templates/estudios/index.ejs
+++ b/themes/default/templates/estudios/index.ejs
@@ -17,7 +17,7 @@
                           <p class="card-text"><%= child.metadata.description %></p>
                         </div>
                         <div class="card-footer bg-transparent border-0">
-                            <a href="/<%= child.directory %>" class="btn btn-primary">Quiero saber más &RightArrow;</a>
+                            <a href="/<%= child.directory %>" class="btn btn-primary">Los quiero conocer &RightArrow;</a>
                         </div>
                       </div>                    
                 <% }); %>
