--- a/themes/default/templates/productos/index.ejs
+++ b/themes/default/templates/productos/index.ejs
@@ -17,7 +17,7 @@
                           <p class="card-text"><%= producto.metadata.description %></p>
                         </div>
                         <div class="card-footer bg-transparent border-0">
-                            <a href="/<%= producto.directory %>" class="btn btn-info">Quiero saber más &RightArrow;</a>
+                            <a href="/<%= producto.directory %>" class="btn btn-info">Muéstrame más &RightArrow;</a>
                         </div>
                       </div>                    
                 <% }); %>
