--- a/themes/default/templates/productos/item.ejs
+++ b/themes/default/templates/productos/item.ejs
@@ -46,8 +46,8 @@
                                             <%= studio.metadata.description %>
                                         </p>
                                         <p>
-                                            <a class="card-link" href="/<%= studio.directory %>"
-                                                role="button">Quiero saber más &RightArrow;</a>
+                                            <a class="btn btn-primary" href="/<%= studio.directory %>"
+                                                role="button">Los quiero conocer &RightArrow;</a>
                                         </p>
                                     </div>
                                 </div>
