--- a/themes/default/templates/_page.ejs
+++ b/themes/default/templates/_page.ejs
@@ -1,4 +1,4 @@
-<div class="container-fluid p-5 mb-5 bg-primary text-light main-header-img">
+<div class="container-fluid p-5 mb-5 text-light main-header-img">
 
     <div class="mb-4">
         <div class="container">
