--- a/themes/default/templates/blog/index.ejs
+++ b/themes/default/templates/blog/index.ejs
@@ -14,7 +14,7 @@
 
                 <div class="card mb-5 bg-transparent border-0">
                     <div class="row g-0">
-                        <div class="col-md-4 text-center bg-primary">
+                        <div class="col-md-4 text-center">
                         <img src="/<%= post.directory %>/<%= post.metadata.image %>" 
                             class="img-fluid" alt="<%= post.metadata.title %>">
                         </div>
