--- a/themes/default/templates/estudios/index.ejs
+++ b/themes/default/templates/estudios/index.ejs
@@ -10,7 +10,7 @@
 
                 <% page.children.forEach(child=> { %>
 
-                    <div class="studio-card card m-2 mb-5 border-0 bg-transparent" style="width: 18rem;">
+                    <div class="studio-card card m-2 mb-5 border-0 bg-transparent">
                         <img src="/<%= child.directory %>/<%= child.metadata.image %>" class="img-fluid">
                         <div class="card-body">
                           <h5 class="card-title"><%= child.metadata.title %></h5>
