--- a/themes/default/templates/productos/index.ejs
+++ b/themes/default/templates/productos/index.ejs
@@ -8,9 +8,9 @@
 
             <div class="card-group">
 
-                <% page.children.forEach(producto => { %>
+                <% for(const producto of page.children) { %>
 
-                    <div class="studio-card card m-2 mb-5 border-0 bg-transparent" style="width: 18rem;">
+                    <div class="studio-card card m-2 mb-5 border-0 bg-transparent">
                         <img src="/<%= producto.directory %>/<%= producto.metadata.image %>" class="img-fluid">
                         <div class="card-body">
                           <h5 class="card-title"><%= producto.metadata.title %></h5>
@@ -20,7 +20,7 @@
                             <a href="/<%= producto.directory %>" class="btn btn-info">Muéstrame más &RightArrow;</a>
                         </div>
                       </div>                    
-                <% }); %>
+                <% } %>
             
             </div> <!-- group -->
 
