--- a/themes/default/templates/index.ejs
+++ b/themes/default/templates/index.ejs
@@ -122,7 +122,7 @@
                 </div>
 
                 <div class="m-5">
-                    <h2 class="text-center">Nuestros Creadores</h2>
+                    <h2 class="text-center">Nuestros Creadores de Videojuegos</h2>
                 </div>
 
 
